Bug 64588 - EDITING - Rearranging Slides with Same Title Results in Duplicate Slides (and loss of slides)
Summary: EDITING - Rearranging Slides with Same Title Results in Duplicate Slides (and...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
3.5.7.2 release
Hardware: All All
: high major
Assignee: Justin L
URL:
Whiteboard: target:5.4.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-14 15:10 UTC by Ivan Klass
Modified: 2017-05-18 17:33 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Zip archive that contains pptx file and same odp file (31.18 KB, application/zip)
2013-05-14 15:10 UTC, Ivan Klass
Details
Screncast for bug (2.82 MB, video/ogg)
2013-05-15 20:46 UTC, Ivan Klass
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ivan Klass 2013-05-14 15:10:49 UTC
Created attachment 79306 [details]
Zip archive that contains pptx file and same odp file

After opening .pptx file (exported from Google Drive Presentation web app) I can't move slide if it has title shared with another slide. (I mean it was 2 or more slides with same title, but different content). 
Both Ctrl-X - Ctrl-V and Drag-n-drop doesn't work as expected. Changing slide titles after importing doesn't help. 
Moreover, after I save this file in ODF, restart Libre Office and open this new .odp it still doesn't work as expected and reproduces this strange buggly behaviour. Attaching exported Google Drive .pptx and file saved as .odp. Try just swap first slide and second - you will get just duplicates of first slide. (If it will reproducable on your environment. Mine is Ubuntu 13.04, Libre Office 4.0.2.2 (build ID: 400m0(Build:2))) Note averything is ok when moving third slide.
Comment 1 ign_christian 2013-05-14 15:58:36 UTC Comment hidden (obsolete)
Comment 2 Joel Madero 2013-05-15 17:56:36 UTC Comment hidden (obsolete)
Comment 3 Ivan Klass 2013-05-15 20:46:33 UTC
Created attachment 79366 [details]
Screncast for bug
Comment 4 Ivan Klass 2013-05-15 20:47:15 UTC
I didn't download this package manually, I just use ubuntu and make updates regulary. I've just tried to reinstall it from repository, and behaviour doesn't change.
UPDATE: Just noticed that bug I've described happens only when moving second slide to first position, not vice-versa. 
Attached an screencast
Comment 5 Joel Madero 2013-05-15 20:56:55 UTC
Yeah I suspect it's Ubuntu specific and thus NOTOURBUG, I was able to move things around no problem. Bjoern will have more info when he gets a chance to comment. Thanks for the additional testing
Comment 6 Björn Michaelsen 2013-05-17 19:05:33 UTC
reproducable on both a 4.0.2.2 Ubuntu release build and on master at https://gerrit.libreoffice.org/gitweb?p=core.git;a=commit;h=26d092b3635680248f8b176564409e6c0c24bfbf (dev-build) and 3.6.4.3 (different distro build. definitively not Ubuntu specific.
Comment 7 Joel Madero 2013-05-17 19:13:21 UTC
strange. Will try again then attempt a bibisect on it.
Comment 8 Joel Madero 2013-05-19 16:59:48 UTC
Well, I can confirm but I can confirm more than just this. 

The same problem happens with the odt file. 

Also, it goes all the way back to prebibisect times (3.6.0.0.alpha1)

Updating version & title (removing pptx) as it happens no matter what the extension is.
Comment 9 Robinson Tryon (qubit) 2015-12-14 05:40:07 UTC Comment hidden (obsolete)
Comment 10 Xisco Faulí 2016-09-14 14:47:05 UTC
Only regressions should use the keyword 'preBibisect'. Removing it...
Comment 11 Xisco Faulí 2016-09-14 15:43:12 UTC
[This is an automatic message]

Changing version to 3.5.7.2 in order to get rid of 'preBibisect' version as 3.5.7.2 looks to be the last version not covered by bibisect-43all.
Comment 12 Justin L 2016-12-27 17:55:32 UTC
reproduced on Windows with LO 5.1.6.2 x32 - marking as not Linux only.
reproduced on Ubuntu x64 with LO 5.3beta2 - marking as not x32 only.
Comment 13 Justin L 2016-12-28 19:32:41 UTC
If you move a duplicately named slide (not the first one, but any following ones) to ANY location, it will be replaced by the first instance of that name.

Not really high/major importance any more, since it is difficult (if not impossible) to rename a slide to match an existing one now.

Still, proposed fix at https://gerrit.libreoffice.org/32481
Comment 14 Commit Notification 2017-01-12 13:00:11 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=14d05c9b852a0f94c6cbace7cd7887523a89d7d1

tdf#64588 - prevent loss of non-uniquely-named slide

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.