tdf#64588 - prevent loss of non-uniquely-named slide

Although the UI prevents someone from renaming slides
so that two have the same name, it is still possible to
have such non-uniquely named pages apparently.  Since drag/drop
uses the name to add a slide to the clipboard, it resulted
in duplicates of the first found instance of the slidename, and
loss of the similarly-named slides when they were dragged to
a new location.

Change-Id: I2986a7c6c3360162adf9430f645d0dfc73f1d4e2
Reviewed-on: https://gerrit.libreoffice.org/32481
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Justin Luth <justin_luth@sil.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>